# lessi

./: Cargo.toml  README.md
.github/workflows/: actions.yml
src/: image.rs  main.rs  pager.rs
src/snapshots/: lessi__image__tests__ansi_processing.snap  lessi__image__tests__kitty_image_processing.snap  lessi__image__tests__sixel_image_processing.snap  lessi__image__tests__visible_images_at_various_offsets.snap  lessi__pager__tests__ansi_parsing_plain_text.snap  lessi__pager__tests__ansi_parsing_preserves_block_characters.snap  lessi__pager__tests__ansi_truecolor_segments.snap
tests/fixtures/: autobahn-clip-bottom-half.ansi  autobahn-clip-bottom-half.kitty  autobahn-clip-bottom-half.sixel  autobahn-clip-entering-5-rows.kitty  autobahn-clip-entering-5-rows.sixel  autobahn-clip-first-row.kitty  autobahn-clip-first-row.sixel  autobahn-clip-middle.ansi  autobahn-clip-middle.kitty  autobahn-clip-middle.sixel  autobahn-clip-single-row.kitty  autobahn-clip-single-row.sixel  autobahn-clip-top-half.ansi  autobahn-clip-top-half.kitty  autobahn-clip-top-half.sixel  autobahn.ansi  autobahn.kitty  autobahn.sixel
