[package]
name = "lessi"
version = "0.1.0"
edition = "2021"
description = "A terminal pager with integrated sixel/kitty graphics support"
authors = ["Rob Lillack <rob@lillack.net>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/roblillack/lessi"
repository = "https://github.com/roblillack/lessi"
documentation = "https://docs.rs/lessi"

[[bin]]
name = "lessi"
path = "src/main.rs"

[dependencies]
crossterm = { version = "0.27", features = ["use-dev-tty"] }
unicode-width = "0.1"
clap = { version = "4.4", features = ["derive"] }
libc = "0.2"
