[package]
name = "lessi"
version = "0.2.1"
edition = "2021"
description = "A terminal pager with integrated sixel/kitty graphics support"
authors = ["Rob Lillack <rob@lillack.net>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/roblillack/lessi"
repository = "https://github.com/roblillack/lessi"
documentation = "https://docs.rs/lessi"

[[bin]]
name = "lessi"
path = "src/main.rs"

[dependencies]
crossterm = { version = "0.29", features = ["use-dev-tty"] }
unicode-width = "0.2.2"
clap = { version = "4.4", features = ["derive"] }
base64 = "0.22"
flate2 = "1"
png = "0.17"
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
insta = "1"
